<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PersegiFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- TODO: Update blank fragment layout -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:text="@string/persegi_panjang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"/>
                <EditText
                    android:id="@+id/edPanjangPp"
                    android:layout_marginTop="16dp"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/edLebarPp"
                    android:layout_marginTop="16dp"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btnHitungPp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hitung"
                    android:layout_marginTop="16dp"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hasil"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="80dp"
                        android:layout_marginTop="16dp"
                        android:layout_height="wrap_content"
                        android:text="@string/luas"
                        android:textSize="24sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/keliling"
                        android:layout_marginTop="12dp"
                        android:textSize="24sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/tvLuasPp"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/_0"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/tvKelPp"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/_0"
                        android:textAlignment="center"
                        android:layout_marginTop="12dp"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLuasPp" />


                </androidx.constraintlayout.widget.ConstraintLayout>
                <Button
                    android:id="@+id/btnSharePp"
                    android:layout_width="wrap_content"
                    android:text="@string/share"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
